src/tests/cases/snapshots/diskonaut__tests__cases__ui__files_with_size_zero.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 0 (3 files), freed: 0 | /tmp/diskonaut_tests/files_with_size_zero                                                                                                                     
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────┐
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file1                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                           0 (33%)                                                           │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                            file3                             │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                              │
│                                                                                                                             │                           0 (33%)                            │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file2                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                           0 (33%)                                                           │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit, <Q> - quit immediately
